# src/main/java/com/truc/eventbooking/auth/AuthController.java
@@ -1,0 +1,31 @@
+package com.truc.eventbooking.auth;
+
+import com.truc.eventbooking.auth.dto.LoginRequest;
+import com.truc.eventbooking.auth.dto.LoginResponse;
+import jakarta.validation.Valid;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.http.HttpStatus;
+
+import com.truc.eventbooking.auth.dto.RegisterResponse;
+import com.truc.eventbooking.auth.dto.RegisterRequest;
+
+@RestController
+@RequestMapping("/api/auth")
+public class AuthController {
+    private final AuthService authService;
+    public AuthController(AuthService authService) {
+        this.authService = authService;
+    }
+
+    @PostMapping("/register")
+    @ResponseStatus(HttpStatus.CREATED)
+    public RegisterResponse register(@Valid @RequestBody RegisterRequest registerRequest) {
+        return authService.register(registerRequest);
+    }
+
+    @PostMapping("/login")
+    public LoginResponse login(@Valid @RequestBody LoginRequest loginRequest) {
+        return authService.login(loginRequest);
+    }
+
+}
