# src/main/java/com/truc/eventbooking/auth/dto/LoginResponse.java
@@ -1,0 +1,8 @@
+package com.truc.eventbooking.auth.dto;
+
+public record LoginResponse (
+        String accessToken,
+        String tokenType,
+        long expiresIn
+){
+}
